Changed accelerometer rate to 2Hz instead of 14. add check for bad velocity data from GPS. Submit additional point from IOIO, after an update had been deferred.